# Automy

./: README.md  main.py  pyproject.toml  requirements.txt
cli/: __init__.py  arguments.py  console.py
core/: __init__.py  base.py  exceptions.py
core/sites/: e_next.py  real_discount.py
