[tool.poetry]
name = "automy"
version = "1.0.0"
description = "Autometic Udemy Course Enroller"
authors = []
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
cloudscraper = "^1.2.69"
browser-cookie3 = "^0.17.0"
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
rich = "^13.3.1"
inquirer = "^3.1.2"


[tool.poetry.group.dev.dependencies]
black = "^23.1.0"
pylint = "^2.16.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
